name:                distro-sales
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/distro-sales#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Address
                     , Customer
                     , DB
                     , Lib
                     , LineItem
                     , Location
                     , Order
                     , Sale
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , country-codes
                     , lens
                     , mtl
                     , postgresql-simple
                     , scientific
                     , text
                     , time
                     , transformers
                     , wreq
  default-language:    Haskell2010

executable distro-sales-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -static -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , distro-sales
                     , lens
                     , postgresql-simple
                     , text
                     , wreq
  default-language:    Haskell2010

test-suite distro-sales-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , distro-sales
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/distro-sales
